--- a/trunk/AlgPedia/algorithm/templates/display_algorithm_by_id.html
+++ b/trunk/AlgPedia/algorithm/templates/display_algorithm_by_id.html
@@ -1,7 +1,6 @@
 {% extends "main_template.html" %}
 
 {% block content %}
-
 	<h3><a href="{{ classification_algp_url }}"	target="_blank">{{algorithm_classification }}</a></h3>
 	
 	<form id="add_algorithm_form">
@@ -63,14 +62,15 @@
 		<div class="modal-body">
 			<input type="hidden" name="evaluation-modal-impl-id" value="" id="evaluation-modal-impl-id" />
 			<table class="table table-bordered">
-				{% for iqa in impl_question_answers %}
+				{% for iq in impl_question_answers %}
 				<tr>
-					<td>{{iqa.i_q.text}}?</td>
+					<td>{{iq.i_q.text}}?</td>
 					<td>
-						<div class="evaluation-modal-radiogroup" id="evaluation-modal-question-{{iqa.i_q.id}}">
-							<input type="hidden" class="impl-question" value="{{iqa.i_q.id}}" />
-						{% for iqa2 in iqa.i_q_a %}
-							<input type="radio" name="evaluation-modal-{{iqa.i_q.id}}" value="{{iqa2.value}}" />{{iqa2.text}}
+						<div class="evaluation-modal-radiogroup" id="evaluation-modal-question-{{iq.i_q.id}}">
+							<input type="hidden" class="impl-question" value="{{iq.i_q.id}}" />
+						{% for iqa in iq.i_q_a %}
+							<input type="radio" name="evaluation-modal-{{ iq.i_q.id}}" id="evaluation-modal-{{iqa.id}}" value="{{iqa.value}}" />
+							<label for="evaluation-modal-{{iqa.id}}" class="label-correction">{{iqa.text}}</label>
 						{% endfor %}
 						</div>
 					</td>
@@ -83,7 +83,14 @@
 			<button id="evaluation-modal-save" class="btn btn-primary">Save changes</button>
 		</div>
 	</div>
-	<script src="/site_media/js/plugins/raty/jquery.raty.min.js" type="text/javascript"></script>
+	<style type="text/css">
+		.label-correction {
+			display: inline;
+			position: relative;
+			top: 4px;
+			padding-right: 5px;
+		}
+	</style>
 	<script type="text/javascript">
 		$(document).ready(function() {
 			$("#evaluation-modal").on('hidden', modalHiddenHandler);
@@ -96,10 +103,10 @@
 					var implementationId = $(this).attr('id').split('-')[1];
 					var implementationPLanguage = $("#implementation-" + implementationId).find(".accordion-toggle").html().trim();
 					var algorithmName = $("#algorithm-name").html();
-			
+					
 					$("#evaluation-modal-impl-id").val(implementationId);
 					$("#evaluation-modal-impl-plang").html(algorithmName + "in " + implementationPLanguage);
-			
+					
 					$("#evaluation-modal").modal();
 				}
 			});
