--- a/AlgPedia/algorithm/static/css/algpedia.css
+++ b/AlgPedia/algorithm/static/css/algpedia.css
@@ -22,3 +22,10 @@
 	display:inline-block;
 	cursor:pointer;
 }
+
+.label-correction {
+	display: inline;
+	position: relative;
+	top: 4px;
+	padding-right: 5px;
+}
